# miniv

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  README.md  buf.c  buf.h  connection.c  connection.go  connection.h  connection_test.go  endpoint.c  endpoint.go  endpoint.h  endpoint_test.go  err.c  err.h  framer.c  framer.go  framer.h  framer_test.go  message.c  message.go  message.h  message_test.go  miniv.h  signature.c  signature.h  teststruct.c  teststruct.h  util.go  v23.h  v23_uniqueid.c  v23_uniqueid.h  vom.c  vom.go  vom.h  vom_test.go
flow/message/: message.c  message.go  message.h  message_test.go
framer/: framer.c  framer.go  framer.h  framer_test.go
mvrpc/: CMakeLists.txt  mvrpc.c
